fix #6 spacing in two-items lists

--- a/stylesheets/lists.less
+++ b/stylesheets/lists.less
@@ -74,6 +74,7 @@
   }
   .secondary-line {
     color: @fg-subtle;
+    padding-left: @component-icon-size + @component-icon-padding;
   }
 
   .selected {
